--- a/获取贴吧BDUSS/UI.resx
+++ b/获取贴吧BDUSS/UI.resx
@@ -171,10 +171,10 @@
     <value>0</value>
   </data>
   <data name="toolStripStatusLabel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>170, 17</value>
+    <value>186, 17</value>
   </data>
   <data name="toolStripStatusLabel1.Text" xml:space="preserve">
-    <value>百度 BDUSS 获取器 // 作者：</value>
+    <value>百度账号BDUSS获取器 // 作者：</value>
   </data>
   <data name="toolStripStatusLabel2.Size" type="System.Drawing.Size, System.Drawing">
     <value>45, 17</value>
@@ -195,10 +195,10 @@
     <value>StusGame GROUP</value>
   </data>
   <data name="toolStripStatusLabel5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 17</value>
+    <value>58, 17</value>
   </data>
   <data name="toolStripStatusLabel5.Text" xml:space="preserve">
-    <value>// 版本：1.0</value>
+    <value>// 版本：</value>
   </data>
   <data name="panel_bduss.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 199</value>
@@ -251,35 +251,12 @@
   <data name="&gt;&gt;hidePwd.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <data name="getcode.Location" type="System.Drawing.Point, System.Drawing">
-    <value>16, 131</value>
-  </data>
-  <data name="getcode.Size" type="System.Drawing.Size, System.Drawing">
-    <value>99, 23</value>
-  </data>
-  <data name="getcode.TabIndex" type="System.Int32, mscorlib">
-    <value>8</value>
-  </data>
-  <data name="getcode.Text" xml:space="preserve">
-    <value>获取验证码</value>
-  </data>
-  <data name="&gt;&gt;getcode.Name" xml:space="preserve">
-    <value>getcode</value>
-  </data>
-  <data name="&gt;&gt;getcode.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;getcode.Parent" xml:space="preserve">
-    <value>panel_info</value>
-  </data>
-  <data name="&gt;&gt;getcode.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="submit.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="submit.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="submit.Location" type="System.Drawing.Point, System.Drawing">
-    <value>121, 130</value>
+    <value>16, 129</value>
   </data>
   <data name="submit.Size" type="System.Drawing.Size, System.Drawing">
     <value>99, 25</value>
@@ -288,7 +265,7 @@
     <value>7</value>
   </data>
   <data name="submit.Text" xml:space="preserve">
-    <value>提交信息</value>
+    <value>提交信息 (&amp;S)</value>
   </data>
   <data name="&gt;&gt;submit.Name" xml:space="preserve">
     <value>submit</value>
@@ -300,7 +277,7 @@
     <value>panel_info</value>
   </data>
   <data name="&gt;&gt;submit.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>1</value>
   </data>
   <data name="code.Location" type="System.Drawing.Point, System.Drawing">
     <value>85, 98</value>
@@ -321,7 +298,7 @@
     <value>panel_info</value>
   </data>
   <data name="&gt;&gt;code.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>2</value>
   </data>
   <data name="label3.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -348,7 +325,7 @@
     <value>panel_info</value>
   </data>
   <data name="&gt;&gt;label3.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>3</value>
   </data>
   <data name="label2.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -375,7 +352,7 @@
     <value>panel_info</value>
   </data>
   <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>4</value>
   </data>
   <data name="pw.Location" type="System.Drawing.Point, System.Drawing">
     <value>85, 63</value>
@@ -399,7 +376,7 @@
     <value>panel_info</value>
   </data>
   <data name="&gt;&gt;pw.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>5</value>
   </data>
   <data name="user.Location" type="System.Drawing.Point, System.Drawing">
     <value>85, 30</value>
@@ -420,7 +397,7 @@
     <value>panel_info</value>
   </data>
   <data name="&gt;&gt;user.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>6</value>
   </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -447,7 +424,7 @@
     <value>panel_info</value>
   </data>
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>7</value>
   </data>
   <data name="tip.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -456,17 +433,13 @@
     <value>392, 94</value>
   </data>
   <data name="tip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>179, 60</value>
+    <value>173, 12</value>
   </data>
   <data name="tip.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
   </data>
   <data name="tip.Text" xml:space="preserve">
-    <value>输入账号和密码后，请点击 获取
-
-验证码，然后输入验证码，并提
-
-交信息即可获取到所需的BDUSS</value>
+    <value>点击图片或此处重新获取验证码</value>
   </data>
   <data name="&gt;&gt;tip.Name" xml:space="preserve">
     <value>tip</value>
@@ -478,7 +451,7 @@
     <value>panel_info</value>
   </data>
   <data name="&gt;&gt;tip.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>8</value>
   </data>
   <data name="codeimg.Location" type="System.Drawing.Point, System.Drawing">
     <value>394, 24</value>
@@ -499,7 +472,7 @@
     <value>panel_info</value>
   </data>
   <data name="&gt;&gt;codeimg.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>9</value>
   </data>
   <data name="panel_info.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 12</value>
@@ -524,6 +497,12 @@
   </data>
   <data name="&gt;&gt;panel_info.ZOrder" xml:space="preserve">
     <value>3</value>
+  </data>
+  <data name="version.Size" type="System.Drawing.Size, System.Drawing">
+    <value>52, 17</value>
+  </data>
+  <data name="version.Text" xml:space="preserve">
+    <value>Version</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -788,7 +767,7 @@
     <value>633, 374</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>获取贴吧BDUSS</value>
+    <value>百度账号BDUSS获取器 - V</value>
   </data>
   <data name="&gt;&gt;toolStripStatusLabel1.Name" xml:space="preserve">
     <value>toolStripStatusLabel1</value>
@@ -818,6 +797,12 @@
     <value>toolStripStatusLabel5</value>
   </data>
   <data name="&gt;&gt;toolStripStatusLabel5.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripStatusLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;version.Name" xml:space="preserve">
+    <value>version</value>
+  </data>
+  <data name="&gt;&gt;version.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripStatusLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
