--- a/获取贴吧BDUSS/UI.resx
+++ b/获取贴吧BDUSS/UI.resx
@@ -200,6 +200,12 @@
   <data name="toolStripStatusLabel5.Text" xml:space="preserve">
     <value>// 版本：</value>
   </data>
+  <data name="version.Size" type="System.Drawing.Size, System.Drawing">
+    <value>52, 17</value>
+  </data>
+  <data name="version.Text" xml:space="preserve">
+    <value>Version</value>
+  </data>
   <data name="panel_bduss.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 199</value>
   </data>
@@ -501,17 +507,14 @@
   <data name="&gt;&gt;panel_info.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
-  <data name="version.Size" type="System.Drawing.Size, System.Drawing">
-    <value>52, 17</value>
-  </data>
-  <data name="version.Text" xml:space="preserve">
-    <value>Version</value>
-  </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 12</value>
+  </data>
+  <data name="$this.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>617, 335</value>
